--- a/projects.html
+++ b/projects.html
@@ -211,6 +211,16 @@
   <main>
     <section class="container mb-40 mt-5 mx-auto srr projects-section">
       <div class="flex flex-wrap projects justify-between py-24">
+        <a href="https://github.com/PRASSamin/BOOK-API" target="_blank" class="w-1/4 p-3 proj">
+          <div>
+            <img src="https://iili.io/JNsn2YF.jpg" alt="" srcset="" />
+            <div class="dark-mask"></div>
+          </div>
+          <div class="proj-text">
+            <h2 class="pras-subtext">flask api</h2>
+            <h1 class="pras-mtext">PRAS BOOK API</h1>
+          </div>
+        </a>
         <a href="https://github.com/PRASSamin/PRAS-Recipe-Realm" target="_blank" class="w-1/4 p-3 proj">
           <div>
             <img src="images/recipe-realm.jpg" alt="" srcset="" />
