--- a/projects.html
+++ b/projects.html
@@ -19,6 +19,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <meta name="google-site-verification" content="vNaRXyhweWj5RilU-U-6IooUvk-43OoPckDRh7tN25Q" />
   </head>
   <style>
     .fa-sun,
