--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <script src="js/redirect.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
-    <title>Blogs</title>
+    <title>PRAS Samin | About</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/about.css" />
     <link rel="shortcut icon" href="images/favicon.svg" type="image/x-icon" />
