--- a/blogs.html
+++ b/blogs.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="viewport" content="width=device-width, user-scalable=no" />
-  <title>Blogs</title>
+  <title>PRAS Samin | Blogs</title>
   <link rel="stylesheet" href="css/style.css" />
   <link rel="shortcut icon" href="images/favicon.svg" type="image/x-icon" />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
