--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
-    <title>Blogs</title>
+    <title>PRAS Samin | Projects</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" href="images/favicon.svg" type="image/x-icon" />
     <link
