--- a/blogs.html
+++ b/blogs.html
@@ -15,14 +15,14 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <meta name="keywords" content="prassamin, portfolio, projects, blogs, PRAS Samin, PRAS, Samin, Razin, Ahmed, Razin Ahmed, Razin Ahmed Samin, Razin Ahmed Samin Portfolio, Razin Ahmed Portfolio, PRAS Samin Portfolio, Programmer, Programmer Portfolio, Web Developer, Web Developer Portfolio, React, Djngo, HTML, CSS, JavaScript, Python, Bangladesh, India, Dhaka, Dhaka Bangladesh, United Kingdom, Usa, United States">
-    <link rel="canonical" href="https://prassamin.onrender.com/index.html">
+    <link rel="canonical" href="https://prassamin.onrender.com/blogs.html">
 
 
     <meta name="description" content="Explore the portfolio of PRAS Samin, showcasing innovative web development projects with expertise in React, Tailwind, Django, and Node.js. Discover dynamic web applications and custom solutions crafted with passion and precision.">
     <meta name='og:description' content='Explore the portfolio of PRAS Samin, showcasing innovative web development projects with expertise in React, Tailwind, Django, and Node.js. Discover dynamic web applications and custom solutions crafted with passion and precision.' />
         <meta property="og:title" content="PRAS Samin | Portfolio" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://prassamin.onrender.com/index.html" />
+        <meta property="og:url" content="https://prassamin.onrender.com/blogs.html" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:title" content="PRAS Samin | Portfolio" />
         <meta name="twitter:description" content="Explore the portfolio of PRAS Samin, showcasing innovative web development projects with expertise in React, Tailwind, Django, and Node.js. Discover dynamic web applications and custom solutions crafted with passion and precision." />
