--- a/projects.html
+++ b/projects.html
@@ -19,48 +19,75 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <meta name="keywords" content="prassamin, portfolio, projects, blogs, PRAS Samin, PRAS, Samin, Razin, Ahmed, Razin Ahmed, Razin Ahmed Samin, Razin Ahmed Samin Portfolio, Razin Ahmed Portfolio, PRAS Samin Portfolio, Programmer, Programmer Portfolio, Web Developer, Web Developer Portfolio, React, Djngo, HTML, CSS, JavaScript, Python, Bangladesh, India, Dhaka, Dhaka Bangladesh, United Kingdom, Usa, United States">
-    <link rel="canonical" href="https://prassamin.onrender.com/profects.html">
+    <meta
+      name="keywords"
+      content="prassamin, portfolio, projects, blogs, PRAS Samin, PRAS, Samin, Razin, Ahmed, Razin Ahmed, Razin Ahmed Samin, Razin Ahmed Samin Portfolio, Razin Ahmed Portfolio, PRAS Samin Portfolio, Programmer, Programmer Portfolio, Web Developer, Web Developer Portfolio, React, Djngo, HTML, CSS, JavaScript, Python, Bangladesh, India, Dhaka, Dhaka Bangladesh, United Kingdom, Usa, United States"
+    />
+    <link rel="canonical" href="https://prassamin.onrender.com/profects.html" />
 
-
-    <meta name="description" content="Explore the portfolio of PRAS Samin, showcasing innovative web development projects with expertise in React, Tailwind, Django, and Node.js. Discover dynamic web applications and custom solutions crafted with passion and precision.">
-    <meta name='og:description' content='Explore the portfolio of PRAS Samin, showcasing innovative web development projects with expertise in React, Tailwind, Django, and Node.js. Discover dynamic web applications and custom solutions crafted with passion and precision.' />
-        <meta property="og:title" content="PRAS Samin | Portfolio" />
-        <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://prassamin.onrender.com/profects.html" />
-        <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:title" content="PRAS Samin | Portfolio" />
-        <meta name="twitter:description" content="Explore the portfolio of PRAS Samin, showcasing innovative web development projects with expertise in React, Tailwind, Django, and Node.js. Discover dynamic web applications and custom solutions crafted with passion and precision." />
-        <meta
-          property="og:image"
-          content="https://firebasestorage.googleapis.com/v0/b/tzr-storage.appspot.com/o/pras.svg?alt=media&token=f766b612-c699-406c-9c52-4cf9ba920e82"
-        />
-        <meta
-          name="twitter:image"
-          content="https://firebasestorage.googleapis.com/v0/b/tzr-storage.appspot.com/o/pras.svg?alt=media&token=f766b612-c699-406c-9c52-4cf9ba920e82"
-        />
+    <meta
+      name="description"
+      content="Explore the portfolio of PRAS Samin, showcasing innovative web development projects with expertise in React, Tailwind, Django, and Node.js. Discover dynamic web applications and custom solutions crafted with passion and precision."
+    />
+    <meta
+      name="og:description"
+      content="Explore the portfolio of PRAS Samin, showcasing innovative web development projects with expertise in React, Tailwind, Django, and Node.js. Discover dynamic web applications and custom solutions crafted with passion and precision."
+    />
+    <meta property="og:title" content="PRAS Samin | Portfolio" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://prassamin.onrender.com/profects.html"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="PRAS Samin | Portfolio" />
+    <meta
+      name="twitter:description"
+      content="Explore the portfolio of PRAS Samin, showcasing innovative web development projects with expertise in React, Tailwind, Django, and Node.js. Discover dynamic web applications and custom solutions crafted with passion and precision."
+    />
+    <meta
+      property="og:image"
+      content="https://firebasestorage.googleapis.com/v0/b/tzr-storage.appspot.com/o/pras.svg?alt=media&token=f766b612-c699-406c-9c52-4cf9ba920e82"
+    />
+    <meta
+      name="twitter:image"
+      content="https://firebasestorage.googleapis.com/v0/b/tzr-storage.appspot.com/o/pras.svg?alt=media&token=f766b612-c699-406c-9c52-4cf9ba920e82"
+    />
     <meta
       name="google-site-verification"
       content="vNaRXyhweWj5RilU-U-6IooUvk-43OoPckDRh7tN25Q"
     />
-    
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-T8ZN3DB7');</script>
-  <!-- End Google Tag Manager -->
-   
-   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-TGG3C6N8NM"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-TGG3C6N8NM');
-</script>
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-T8ZN3DB7");
+    </script>
+    <!-- End Google Tag Manager -->
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-TGG3C6N8NM"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-TGG3C6N8NM");
+    </script>
+    <script src="/js/projects.js" async></script>
   </head>
   <style>
     .fa-sun,
@@ -259,115 +286,9 @@
     </section>
     <main>
       <section class="container mb-40 mt-5 mx-auto srr projects-section">
-        <div class="flex flex-wrap projects justify-between py-24">
-          <a
-            href="https://tahmidzrahat.com/"
-            target="_blank"
-            class="w-1/4 p-3 proj"
-          >
-            <div>
-              <img src="images/tzr.png" alt="tzr" srcset="" />
-              <div class="dark-mask"></div>
-            </div>
-            <div class="proj-text">
-              <h2 class="pras-subtext">Full-Stack Project</h2>
-              <h1 class="pras-mtext">TRZ</h1>
-            </div>
-          </a>
-          <a
-            href="https://github.com/PRASSamin/JWTify"
-            target="_blank"
-            class="w-1/4 p-3 proj"
-          >
-            <div>
-              <img src="images/jwtify.svg" alt="jwtify" srcset="" />
-            </div>
-            <div class="proj-text">
-              <h2 class="pras-subtext">React App</h2>
-              <h1 class="pras-mtext">JWTify</h1>
-            </div>
-          </a>
-          <a
-            href="https://github.com/PRASSamin/Library-Management-System"
-            target="_blank"
-            class="w-1/4 p-3 proj"
-          >
-            <div>
-              <img src="images/lms.png" alt="lms" srcset="" />
-            </div>
-            <div class="proj-text">
-              <h2 class="pras-subtext">Full-Stack Project</h2>
-              <h1 class="pras-mtext truncat">Library Management System</h1>
-            </div>
-          </a>
-          <a
-            href="https://github.com/PRASSamin/BOOK-API"
-            target="_blank"
-            class="w-1/4 p-3 proj"
-          >
-            <div>
-              <img src="https://iili.io/JNsn2YF.jpg" alt="" srcset="" />
-              <div class="dark-mask"></div>
-            </div>
-            <div class="proj-text">
-              <h2 class="pras-subtext">flask api</h2>
-              <h1 class="pras-mtext">PRAS BOOK API</h1>
-            </div>
-          </a>
-          <a
-            href="https://github.com/PRASSamin/PRAS-Recipe-Realm"
-            target="_blank"
-            class="w-1/4 p-3 proj"
-          >
-            <div>
-              <img src="images/recipe-realm.jpg" alt="" srcset="" />
-              <div class="dark-mask"></div>
-            </div>
-            <div class="proj-text">
-              <h2 class="pras-subtext">flutter app</h2>
-              <h1 class="pras-mtext">Recipe Realm</h1>
-            </div>
-          </a>
-          <a
-            href="https://github.com/PRASSamin/PRAS-Weather-App"
-            target="_blank"
-            class="w-1/4 p-3 proj"
-          >
-            <div>
-              <img src="images/pras-weather.jpg" alt="" srcset="" />
-            </div>
-            <div class="proj-text">
-              <h2 class="pras-subtext">flutter app</h2>
-              <h1 class="pras-mtext">PRAS Weather</h1>
-            </div>
-          </a>
-          <a
-            href="https://github.com/PRASSamin/PRAS-Spectrum-Theme"
-            target="_blank"
-            class="w-1/4 p-3 proj"
-          >
-            <div>
-              <img src="images/spectrum-theme.png" alt="" srcset="" />
-            </div>
-            <div class="proj-text">
-              <h2 class="pras-subtext">vscode extension</h2>
-              <h1 class="pras-mtext">Spectrum Theme</h1>
-            </div>
-          </a>
-          <a
-            href="https://github.com/PRASSamin/PRAS-Video-Downloader"
-            target="_blank"
-            class="w-1/4 p-3 proj"
-          >
-            <div>
-              <img src="images/PRAS-Downloader.jpg" alt="" srcset="" />
-            </div>
-            <div class="proj-text">
-              <h2 class="pras-subtext">website</h2>
-              <h1 class="pras-mtext">PRAS Downloader</h1>
-            </div>
-          </a>
-        </div>
+        <div
+          class="flex flex-wrap projects justify-between py-24 projects-container"
+        ></div>
       </section>
     </main>
 
@@ -472,12 +393,17 @@
               </a>
             </div>
             <h1 class="copyrighttxt pras-subtext">
-              ©2024 <a href="index.html">PRAS.</a> All rights reserved.
+              ©<span class="year"></span> <a href="index.html">PRAS.</a> All rights reserved.
             </h1>
           </div>
         </div>
       </section>
     </nav>
+
+    <script>
+      document.querySelector(".year").textContent = new Date().getFullYear();
+    </script>
+
 
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="js/theme.js"></script>
